Bug 1524852 - Fix invisible title for multiselected tabs on MacOS. r=jaws
Differential Revision: https://phabricator.services.mozilla.com/D18893

--- a/browser/themes/osx/compacttheme.css
+++ b/browser/themes/osx/compacttheme.css
@@ -9,6 +9,7 @@
   -moz-font-smoothing-background-color: -moz-mac-vibrant-titlebar-light;
 }
 
+.tabbrowser-tab[multiselected],
 .tabbrowser-tab[visuallyselected=true] {
   -moz-font-smoothing-background-color: var(--toolbar-bgcolor);
 }
